week9/friday/k8s/kk-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-api
  namespace: kijani-project
  labels:
    app: kk-api
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: kk-api
