week9/friday/k8s/kk-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-payments
  namespace: kijani-project
  labels:
    app: kk-payments
spec:
  type: ClusterIP
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: kk-payments
