week9/friday/k8s/kijani-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kijani-ingress
  namespace: kijani-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: kijani.local
    http:
      paths:
      - path: /payments(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kk-payments
            port:
              number: 3001
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: kk-api
            port:
              number: 8080
